Crash when calculating rigid body mass #109928

Closed
opened 2023-07-10 18:51:08 +02:00 by Damien Picard · 1 comment
Member

System Information
Operating system: Linux-6.2.0-24-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.54.03

Blender Version
Broken: version: 4.0.0 Alpha, branch: dp_fix_messages (modified), commit date: 2023-07-10 16:33, hash: 5c4694759bc7
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: rBf6cb5f54494e
Worked: 2.79 (but there were no collections then)

Short description of error
When calculating the rigid body mass of the default cube after choosing the default collection as rigid body collection, Blender crashes.

Exact steps for others to reproduce the error

  1. In the scene properties, Add Rigid Body World.
  2. In the Rigid Body settings, set the Collection to "Collection" (the default one).
  3. Hit F3 and search for Calculate Mass.
  4. Select any density preset.
  5. Blender crashes.

**System Information** Operating system: Linux-6.2.0-24-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.54.03 **Blender Version** Broken: version: 4.0.0 Alpha, branch: dp_fix_messages (modified), commit date: 2023-07-10 16:33, hash: `5c4694759bc7` Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `rBf6cb5f54494e` Worked: 2.79 (but there were no collections then) **Short description of error** When calculating the rigid body mass of the default cube after choosing the default collection as rigid body collection, Blender crashes. **Exact steps for others to reproduce the error** 1. In the scene properties, Add Rigid Body World. 2. In the Rigid Body settings, set the Collection to "Collection" (the default one). 3. Hit F3 and search for Calculate Mass. 4. Select any density preset. 5. Blender crashes. <video src="/attachments/fd4c2d2d-5307-4bd2-9cb4-94d84ae3ccdc" title="rigid_body_crash.mp4" controls></video>
Damien Picard added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-10 18:51:08 +02:00
Damien Picard changed title from Crash when calculating rigid body weight to Crash when calculating rigid body mass 2023-07-10 18:57:01 +02:00
Iliya Katueshenock added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-07-10 18:58:20 +02:00
Member

Got a fix (but will check a bit more since there are other issues with adding rigid bodies just through selecting a collection), will put on my desk

Got a fix (but will check a bit more since there are other issues with adding rigid bodies just through selecting a collection), will put on my desk
Philipp Oeser self-assigned this 2023-07-11 10:23:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-11 12:22:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109928
No description provided.